Se modificaron algunos DTO y mappers.